--- a/src/utilities/PrototypeElements/prototype-elements.css
+++ b/src/utilities/PrototypeElements/prototype-elements.css
@@ -2,10 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #eedede;
-  min-height: 200px;
-  min-height: 200px;
-  border: 1px solid red;
+  background-color: #010001;
+  margin: none;
+  padding: none;
+  min-height: 600px;
+  min-width: 600px;
+  border: 3px solid red;
+  box-sizing: border-box;
 }
 
 .hidden {
