--- a/src/utilities/PrototypeElements/prototype-elements.css
+++ b/src/utilities/PrototypeElements/prototype-elements.css
@@ -6,7 +6,8 @@
   margin: none;
   padding: none;
   min-height: 600px;
-  min-width: 600px;
+  /* min-width: 600px; */
+  width: 100vw;
   border: 3px solid red;
   box-sizing: border-box;
 }
