--- a/src/components/ButtonStandard/button-standard.css
+++ b/src/components/ButtonStandard/button-standard.css
@@ -2,16 +2,16 @@
   background-color: #120512;
   color: #fffdff;
   border-radius: 20px;
-  padding: 5px 10px 5px 10px;
-  border: #392a39 solid 1px;
-  margin: 10px;
+  /* padding: 5px 10px 5px 10px; */
+  border: #463446 solid 2px;
+  /* margin: 10px; */
   transform: none; /* Disable press effect */
   box-shadow: none;
 }
 
 .button_standard p {
   font-size: medium;
-  font-weight: bold;
+  font-weight: 500;
   padding: 0;
   margin: 5px 10px;
 }
@@ -20,9 +20,9 @@
   background-color: #1b0c1b;
   color: #ffffff;
   border-radius: 20px;
-  padding: 5px 10px 5px 10px;
-  border: #cab6ca solid 1px;
-  margin: 10px;
+  /* padding: 5px 10px 5px 10px; */
+  border: #cab6ca solid 2px;
+  /* margin: 10px; */
   transform: none; /* Disable press effect */
   box-shadow: none;
 }
@@ -30,9 +30,9 @@
   background-color: #332a33;
   color: #ffffff;
   border-radius: 20px;
-  padding: 5px 10px 5px 10px;
-  border: #e9e1e9 solid 1px;
-  margin: 10px;
+  /* padding: 5px 10px 5px 10px; */
+  border: #e9e1e9 solid 2px;
+  /* margin: 10px; */
   transform: none; /* Disable press effect */
   box-shadow: inset 0 0 0 1px #e9e1e9;
 }
