--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,33 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  max-width: 600px;
+  max-width: 800px;
   flex-flow: column;
-  /* width: 800px; */
+  /* width: 700px; */
+  /* height: 100vw; */
+  background-color: #010001;
 }
 
 .content {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: column;
+  background-color: #010001;
 }
 .hidden {
   display: none;
+}
+
+.App h1 {
+  font-size: xx-large;
+}
+
+.App h1 span {
+  color: #463446;
+}
+
+.header {
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
