--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -9,6 +10,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: white;
   background-color: #010001;
+  height: 100vh;
+  width: 100vw;
 }
 
 code {
@@ -19,7 +22,10 @@ code {
 #root {
   display: flex;
   justify-content: center;
-  /* width: 100vw; */
+  align-items: flex-start;
+  width: 600px;
   margin: 0;
   padding: 0;
+  background-color: #010001;
+  height: 100vh;
 }
