--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@
   text-align: center;
   justify-content: flex-start;
   align-items: center;
-  max-width: 800px;
+  max-width: none;
   flex-flow: column;
   /* width: 700px; */
   /* height: 100vw; */
+  width: 100%;
+  max-width: 100%;
   background-color: #010001;
 }
 
@@ -16,6 +18,8 @@
   align-items: center;
   flex-flow: column;
   background-color: #010001;
+  width: 100%;
+  max-width: 100%;
 }
 .hidden {
   display: none;
@@ -30,8 +34,7 @@
 }
 
 .header {
-  margin-top: 10%;
-  margin-bottom: 2%;
+  margin-top: 5%;
 }
 
 .saved {
