--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: white;
   background-color: #010001;
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
+  /* height: 100vh;
+  width: 100vw; */
 }
 
 code {
@@ -23,9 +25,11 @@ code {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  width: 600px;
+  width: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
   background-color: #010001;
-  height: 100vh;
+  /* height: 100vh; */
+  flex-grow: 1;
 }
